ai/ollama/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ollama
  namespace: ai

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ollama

  template:
    metadata:
      labels:
        app: ollama

    spec:
      containers:
        -  name: ollama
           image: ollama/ollama:latest
           ports:
             - containerPort: 11434

           volumeMounts:
             - name: models
               mountPath: /root/.ollama

           resources:
             requests:
               cpu: "2"
               memory: 4Gi

             limits:
               cpu: "4"
               memory: 8Gi

      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: ollama-models
