ai/ollama/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ollama
  namespace: ai

spec:
  selector:
    app: ollama

  ports:
    - port: 11434
      targetPort: 11434

  type: ClusterIP
