ai/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ollama
  namespace: ai

spec:
  ingressClassName: nginx

  rules:
    - host: ollama.nj.test.lab

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ollama

                port:
                  number: 11434
